Add: gulp task for sass:build, Fix: popperjs console error

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -8654,3 +8654,5 @@ a.text-dark:hover, a.text-dark:focus {
 .alert-dark {
   -webkit-box-shadow: 3px 3px #5f5b5b;
           box-shadow: 3px 3px #5f5b5b; }
+
+/*# sourceMappingURL=main.css.map */
